# rust-axum-seaorm-boilerplate

./: .env.sample  Cargo.toml  Dockerfile  README.md  cargo-generate.toml
src/: app.rs  lib.rs  main.rs
src/common/: api_doc.rs  cfg.rs  graphql.rs  middleware.rs  mod.rs  pagination.rs  validated_json.rs
src/common/config/: mod.rs  shutdown.rs  telemetry.rs
src/common/errors/: mod.rs
src/common/extractors/: mod.rs  path.rs
src/common/middlewares/: mod.rs
src/common/validation/: json.rs  path.rs
src/database/: main.rs  mod.rs
src/database/seeds/: mod.rs  users.rs
src/modules/auth/: controller.rs  service.rs
src/modules/auth/dto/: mod.rs
src/modules/auth/guards/: admin_guard.rs  auth_guard.rs  mod.rs  owner_guard.rs
src/modules/health/: controller.rs  service.rs
src/modules/users/: controller.rs  mod.rs  service.rs
src/modules/users/dto/: mod.rs
