[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["routing"] }
hyper = "1.8.1"
tower = { version = "0.5.0", features = [] }
tower-http = { version = "0.6.6", features = [
  "trace",
  "timeout",
  "request-id",
  "cors",
  "normalize-path",
] }

sea-orm = { version = "1.1.19", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
  "seaography",
] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }

reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.100"
thiserror = "2.0.17"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipauto = "0.2.0"
seaography = { version = "~1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
async-graphql-axum = "7.0.17"
async-graphql = "7.0.17"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.13.1"
tokio-test = "0.4.4"
tower = { version = "0.5.0", features = ["util"] }
http-body-util = "0.1.2"
assert-json-diff = "2.0.2"
