[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[[bin]]
path = "src/database/main.rs"
name = "db"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["routing"] }
hyper = "1.8.1"
tower = { version = "0.5.3", features = [] }
tower-http = { version = "0.6.8", features = [
  "trace",
  "timeout",
  "request-id",
  "cors",
  "normalize-path",
] }

sea-orm = { version = "1.1.19", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
  "seaography",
] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "form",
] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.101"
thiserror = "2.0.18"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipauto = "0.2.0"
seaography = { version = "~1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
async-graphql-axum = "7.2.1"
async-graphql = "7.2.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
base64 = "0.22.1"
bcrypt = "0.18.0"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.5"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
assert-json-diff = "2.0.2"
